# GLC

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  config.  index.html  mkdocs.yml  objects.inv  pyproject.toml
api_references/data_loading/: index.html
api_references/database_mapping/: index.html
api_references/ggm/: index.html
api_references/ggm_umap/: index.html
api_references/glc/: index.html
api_references/ground_truth_validation/: index.html
api_references/mz_peak_picking/: index.html
api_references/quality_scores/: index.html
docs/: index.md  quick_start.md  quickstart.ipynb  tutorial_2.ipynb
docs/api_references/: data_loading.md  database_mapping.md  ggm.md  ggm_umap.md  glc.md  ground_truth_validation.md  mz_peak_picking.md  quality_scores.md
ggm_est/: index.html
pckg_notebooks/: from sklearn.py  import pandas as pd.py  testing_package.ipynb  testing_package2.ipynb
quickstart/: index.html
search/: search_index.json
src/glc/: __init__.py  data_loading.py  glc_model.py  ground_truth_validation.py  ion_processor.py  load_ggm.py  logp_filtering.py  mz_peak_picking.py  quality_scores.py  umap_model_and_plots.py
src/glc/data/: esi_mass_differences.csv  esi_mass_differences.parquet  example_feature_table_addneuromed_lpos.csv  example_ggm_addneuromed_lpos.csv  example_ground_truth_addneuromed_lpos.csv  example_ground_truth_addneuromed_lpos.parquet  lipid_maps_database.csv
tutorial_2/: index.html
tutorials/: index.html
