[project]
name = "glc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tom rix", email = "tom.rix.98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "colorcet>=3.1.0",
    "matplotlib>=3.10.7",
    "molmass>=2025.11.11",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[project.scripts]
glc = "glc:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
]
