[project]
name = "ggmlipidclassifier"
version = "0.1.3"
description = "GGM Lipid Classifier for lipid class prediction of features from untargeted lipidomic LC-MS"
readme = "README.md"
authors = [
    { name = "tom rix", email = "tom.rix21@imperial.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "colorcet>=3.1.0",
    "matplotlib>=3.10.7",
    "molmass>=2025.11.11",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rpy2<=3.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
glc = ["data/**/*"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
]
